syntax = "proto3";

package ocf.cloud.certificateauthority.pb;

option go_package = "github.com/plgd-dev/cloud/certificate-authority/pb;pb";

message SignCertificateRequest {
    bytes certificate_signing_request = 1; // PEM format
}

message SignCertificateResponse {
    bytes certificate = 1; // PEM format
}
